# SimpleGraphs

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  SimpleGraphs.hpp  customClass.cpp  customClass.hpp  main.cpp  tests.cpp
.github/workflows/: compileAndRunTests.yml  runTestsForDebugBuildAndGenerateCoverageReport.yml  runTestsForReleaseBuild.yml  tryCompilersAndGenerateCoverageReport.yml
CustomClass/: CMakeLists.txt  customClass.cpp  customClass.hpp
docs/: Doxyfile
gh_pages/: index.html
include/: CMakeLists.txt
include/simpleGraphs/: simpleGraphs.hpp
testInputs/: char_ull.txt  char_ull_d_u.txt  custom_float_2.txt  custom_float_SPECIAL.txt  int_int_artic.txt  int_int_u_u.txt  string_double.txt
tests/: CMakeLists.txt  tests.cpp
tests/CustomClass/: CMakeLists.txt
tests/testInputs/: custom_float.txt  int_int.txt
